--- a/css/product.css
+++ b/css/product.css
@@ -143,7 +143,7 @@ header .wrapper .banner-slider .arrow {
 }
 
 .search-box {
-    background-color: #0e1422;
+    background-color: var(--secondary-blue);
     display: flex;
     align-items: center;
     padding: 12px 20px;
@@ -172,14 +172,16 @@ header .wrapper .banner-slider .arrow {
 }
 
 .dropdown {
-    width: 15%;
-    height: 30%;
+    width: 40%;
+    height: 50%;
+    /* padding: 12px 20px; */
     position: relative;
     display: inline-block;
 }
 
 .dropbtn {
     width: 100%;
+    height: 100%;
     display: flex;
     justify-content: end;
     align-items: center;
