--- a/css/product.css
+++ b/css/product.css
@@ -195,6 +195,8 @@ header .wrapper .banner-slider .arrow {
 .dropdown-content {
     display: none;
     position: absolute;
+    right: 0;         
+  top: 100%;   
     background-color: white;
     min-width: 250px;
     box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.15);
@@ -433,7 +435,7 @@ header .wrapper .banner-slider .arrow {
     }
     .search .wrapper {
         flex-direction: column;
-        align-items: stretch;
+        /* align-items: stretch; */
         gap: 15px;
     }
     .search-box{
@@ -561,6 +563,7 @@ header .wrapper .banner-slider .arrow {
         justify-content: end;
         background: #fff;
     }
+
     #Mens {
         height: auto;
         margin: 30px 0px;
