--- a/css/style.css
+++ b/css/style.css
@@ -230,18 +230,6 @@ header .wrapper #banner .carousel .contentTwo p {
     color: white;
 }
 
-header .wrapper #banner .carousel .contentTwo a {
-    width: 40%;
-    text-align: center;
-    background-color: var(--primary-yellow);
-    font-size: var(--fs-28);
-    text-decoration: none;
-    border-radius: 8px;
-    color: var(--secondary-blue);
-    font-weight: 600;
-
-
-}
 
 header .wrapper #banner .carousel .contentThree {
     width: 40%;
@@ -269,23 +257,6 @@ header .wrapper #banner .carousel .contentThree p {
     text-align: center;
 }
 
-header .wrapper #banner .carousel .contentThree a {
-   width: 50%;
-    text-align: center;
-    background-color: var(--primary-yellow);
-    font-size: var(--fs-28);
-    text-decoration: none;
-    border-radius: 8px;
-    color: var(--secondary-blue);
-    font-weight: 600;
-    display: flex;
-    align-self: center;
-    justify-content: center;
-    align-items: center;
-
-
-}
-
 header .wrapper #banner .carousel .contentFour {
     width: 50%;
     height: 50%;
@@ -311,23 +282,6 @@ header .wrapper #banner .carousel .contentFour p {
     font-weight: 400;
     color: white;
     text-align: center;
-}
-
-header .wrapper #banner .carousel .contentFour a {
-    width: 30%;
-    text-align: center;
-    background-color: var(--primary-yellow);
-    font-size: var(--fs-28);
-    text-decoration: none;
-    border-radius: 8px;
-    color: var(--secondary-blue);
-    font-weight: 600;
-    display: flex;
-    align-self: center;
-    justify-content: center;
-    align-items: center;
-
-
 }
 
 header .wrapper #banner .carousel.active {
@@ -861,8 +815,9 @@ footer .footer-wrapper .footer-bottom a {
     }
 
     header .wrapper #banner .carousel .contentTwo {
-        right: 80px;
-        top: 180px;
+        right: 40px;
+        top: 130px;
+        width: 40%;
     }
 
     header .wrapper #banner .carousel .contentThree {
@@ -976,8 +931,8 @@ footer .footer-wrapper .footer-bottom a {
 
     header .wrapper #banner .carousel .contentTwo {
         right: 50px;
-        top: 150px;
-        width: 40%;
+        top: 20%;
+        width: 50%;
     }
 
     header .wrapper #banner .carousel .contentThree {
@@ -985,6 +940,9 @@ footer .footer-wrapper .footer-bottom a {
         top: 150px;
         width: 50%;
     }
+    header .wrapper #banner .carousel .contentThree h1 {
+    line-height: 40px;
+}
 
     header .wrapper #banner .carousel .contentFour {
         right: 80px;
@@ -1136,9 +1094,9 @@ footer .footer-wrapper .first-half .footer-section ul {
     header .wrapper #banner{
         height: auto;
     }
-    header .wrapper #banner .carousel {
-        /* height: ; */
-    }
+    /* header .wrapper #banner .carousel {
+         height: ; 
+    } */
     header .wrapper #banner .carousel .image {
     width: 100%;
     height: 90%;
@@ -1149,7 +1107,7 @@ footer .footer-wrapper .first-half .footer-section ul {
     }
     header .wrapper #banner .carousel .contentOne {
         left: 50px;
-        top: 100px;
+        top: 40%;
         width: 70%;
     }
 
@@ -1160,22 +1118,30 @@ footer .footer-wrapper .first-half .footer-section ul {
 
     header .wrapper #banner .carousel .contentTwo {
         right: 30px;
-        top: 100px;
+        top: 30%;
         width: 50%;
     }
-
+header .wrapper #banner .carousel .contentTwo h1 {
+    line-height: 35px;
+}
     header .wrapper #banner .carousel .contentThree {
-        left: 50px;
-        top: 100px;
-        width: 60%;
+        left: 30px;
+        top: 30%;
+        width: 70%;
+        gap: 20px;
     }
-
+header .wrapper #banner .carousel .contentThree h1 {
+    line-height: 35px;
+}
     header .wrapper #banner .carousel .contentFour {
         right: 50px;
-        top: 100px;
+        top: 30%;
         width: 60%;
+        gap: 20px;
     }
-
+header .wrapper #banner .carousel .contentFour h1 {
+    line-height: 35px;
+}
     #best-seller {
         height: auto;
         margin: 30px 0px;
@@ -1322,21 +1288,10 @@ footer .footer-wrapper .first-half .footer-section a {
     header .wrapper nav .nav-wrap ul li a {
         font-size: 16px;
     }
-   header .wrapper #banner .carousel .contentOne a {
-        width: 40%;
-    }
-    header .wrapper #banner .carousel .contentTwo a {
-        width: 50%;
-    }
-    header .wrapper #banner .carousel .contentThree a {
-        width: 60%;
-    }
-    header .wrapper #banner .carousel .contentFour a {
-    width: 40%;
-}
+
     header .wrapper #banner .carousel .contentOne {
         left: 20px;
-        top: 80px;
+        top: 30%;
         width: 80%;
     }
 
@@ -1346,22 +1301,30 @@ footer .footer-wrapper .first-half .footer-section a {
     }
 
     header .wrapper #banner .carousel .contentTwo {
-        right: 20px;
-        top: 80px;
-        width: 60%;
+        right: 0px;
+        top: 20%;
+        width: 65%;
     }
-
+header .wrapper #banner .carousel .contentTwo h1 {
+    line-height: 35px;
+}
     header .wrapper #banner .carousel .contentThree {
         left: 20px;
-        top: 80px;
-        width: 70%;
+        top: 30%;
+        width: 90%;
     }
+    header .wrapper #banner .carousel .contentThree h1 {
+    line-height: 35px;
+}
 
     header .wrapper #banner .carousel .contentFour {
-        right: 30px;
-        top: 80px;
-        width: 70%;
+        right: 40px;
+        top: 20%;
+        width: 80%;
     }
+    header .wrapper #banner .carousel .contentFour h1 {
+    line-height: 40px;
+}
 
     #best-seller {
         height: auto;
@@ -1510,22 +1473,10 @@ footer .footer-wrapper .first-half .footer-section a {
     header .wrapper nav .nav-wrap ul li a {
         font-size: 14px;
     }
-       header .wrapper #banner .carousel .contentOne a {
-        width: 40%;
-
-    }
-        header .wrapper #banner .carousel .contentTwo a {
-        width: 50%;
-    }
-    header .wrapper #banner .carousel .contentThree a {
-        width: 60%;
-    }
-    header .wrapper #banner .carousel .contentFour a {
-    width: 40%;
-}
+  
     header .wrapper #banner .carousel .contentOne {
         left: 15px;
-        top: 60px;
+        top: 30%;
         width: 85%;
     }
 
@@ -1535,21 +1486,32 @@ footer .footer-wrapper .first-half .footer-section a {
     }
 
     header .wrapper #banner .carousel .contentTwo {
-        right: 15px;
-        top: 60px;
+        right: 5px;
+        top: 20%;
         width: 65%;
     }
+    header .wrapper #banner .carousel .contentTwo h1 {
+    line-height: 35px;
+}
 
     header .wrapper #banner .carousel .contentThree {
-        left: 15px;
-        top: 60px;
-        width: 75%;
+        left: 20px;
+        top: 30%;
+        width: 90%;
+        gap: 20px;
     }
+    header .wrapper #banner .carousel .contentThree h1 {
+    line-height: 35px;
+}
 
     header .wrapper #banner .carousel .contentFour {
-        right: 20px;
-        top: 60px;
-        width: 75%;
+        right: 10px;
+        top: 23%;
+        width: 90%;
+        gap: 10px;
+    }
+    header .wrapper #banner .carousel .contentFour h1 {
+        line-height: 35px;
     }
 
     #best-seller {
