--- a/css/product.css
+++ b/css/product.css
@@ -164,7 +164,7 @@ header .wrapper .banner-slider .arrow {
     outline: none;
     color: white;
     font-size: 16px;
-    width: 100%;
+    width: 500px;
 }
 
 .search-box input::placeholder {
