--- a/css/style.css
+++ b/css/style.css
@@ -683,9 +683,9 @@ footer .footer-wrapper .footer-bottom .policy-links {
   height: 60px;
   border: none;
   border-radius: 50%; /* circle */
-  background-color: #ff4081;
+  background-color: var(--secondary-blue);
   color: white;
-  font-size: 28px;
+  font-size: 24px;
   font-weight: bold;
   cursor: pointer;
   box-shadow: 0px 4px 8px rgba(0,0,0,0.3);
@@ -693,7 +693,7 @@ footer .footer-wrapper .footer-bottom .policy-links {
 }
 
 .floating-btn:hover {
-  background-color: #e73370;
+  background-color: rgb(41, 41, 87);
 }
 
 
